force-app/main/default/objects/PureCloud__c/fields/Total_Time_Staffed__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Staffed__c</fullName>
    <formula>IF(Staffed_Sum__c/3600 &lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT(FLOOR(Staffed_Sum__c/3600)) + &quot;:&quot; + IF(FLOOR(MOD(Staffed_Sum__c,3600)/60)&lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT( FLOOR(MOD(Staffed_Sum__c,3600)/60)) + &quot;:&quot; + IF( ROUND(MOD(MOD(Staffed_Sum__c,3600),60),0)&lt; 10, &apos;0&apos;,&apos;&apos;)+ TEXT( ROUND(MOD(MOD(Staffed_Sum__c,3600),60),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Staffed</label>
    <type>Text</type>
</CustomField>