force-app/main/default/objects/PureCloud__c/fields/Training_Coaching_Minute__c.field-meta.xml
<CustomField>
    <fullName>Training_Coaching_Minute__c</fullName>
    <formula>Training_Coaching_Sum__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training - Coaching (Minute)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>