force-app/main/default/objects/PureCloud__c/fields/Training_Coaching_Sum__c.field-meta.xml
<CustomField>
    <fullName>Training_Coaching_Sum__c</fullName>
    <label>Training - Coaching (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>