force-app/main/default/objects/PureCloud__c/fields/Training_count__c.field-meta.xml
<CustomField>
    <fullName>Training_count__c</fullName>
    <label>Training (count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>