force-app/main/default/objects/PureCloud__c/fields/Walk_In_Sum__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Sum__c</fullName>
    <label>Walk In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>